kubernetes/apps/flux-system/konflate/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konflate-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: "konflate.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hooks
            pathType: Prefix
            backend:
              service:
                name: konflate
                port:
                  number: 8080
